@@ -9,7 +9,7 @@
 }
 \details{
   \tabular{ll}{ Package: \tab MALDIquantForeign \cr
-  Version: \tab 0.3\cr Date: \tab 2013-03-01\cr License:
+  Version: \tab 0.3.1\cr Date: \tab 2013-03-02\cr License:
   \tab GPL (>= 3)\cr URL: \tab
   http://strimmerlab.org/software/maldiquant/\cr }
 }
